--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/autotools
-# Edit at https://www.toptal.com/developers/gitignore?templates=autotools
+# Created by https://www.toptal.com/developers/gitignore/api/autotools,c++
+# Edit at https://www.toptal.com/developers/gitignore?templates=autotools,c++
 
 ### Autotools ###
 # http://www.gnu.org/software/automake
@@ -57,4 +57,38 @@ Makefile
 
 ### Autotools Patch ###
 
-# End of https://www.toptal.com/developers/gitignore/api/autotools
+### C++ ###
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# End of https://www.toptal.com/developers/gitignore/api/autotools,c++
