--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,25 @@
+#                                               -*- Autoconf -*-
+# Process this file with autoconf to produce a configure script.
+
 AC_PREREQ([2.72])
-AC_INIT([base1000], [0.0.1], [http://github.com/real-LiHua/base1000])
+AC_INIT([Base1000],[0.0.1],[https://github.com/real-LiHua/Base1000QianZiWenCodec/issues],[base1000],[https://github.com/real-LiHua/Base1000QianZiWenCodec])
 AM_INIT_AUTOMAKE
 AC_CONFIG_HEADERS([config.h])
+
+# Checks for programs.
 AC_PROG_CXX
+AC_PROG_CC
 AC_PROG_MAKE_SET
+
+# Checks for libraries.
+PKG_CHECK_MODULES([CLI11], [CLI11])
+PKG_CHECK_MODULES([ICU], [icu-uc])
+
+# Checks for header files.
+
+# Checks for typedefs, structures, and compiler characteristics.
+
+# Checks for library functions.
+
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
