--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = base1000
-base1000_SOURCES = base1000.cc
-
+base1000_SOURCES = base1000.cc encode.cc decode.cc
+base1000_CPPFLAGS = -DQZW1='"'@QZW1@'"'
 AM_CPPFLAGS = $(ICU_CPPFLAGS)
 AM_LDFLAGS = $(ICU_LIBS)
