--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "base1000"
 version = "0.1.0"
+authors = ["Li Hua <lihua@email.com>"]
 edition = "2024"
+readme = "README.md"
+repository = "https://github.com/real-LiHua/Base1000QianZiWenCodec"
+keywords = ["base1000"]
+categories = ["command-line-utilities", "encoding"]
+include = ["/src/*.rs"]
 
 [features]
 
