--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ include = ["/src/*.rs"]
 
 [dependencies]
 clap = { version = "4.5.31", features = ["derive"] }
+itertools = "0.14.0"
 num-bigint = "0.4.6"
 rand = "0.9.0"
 rust-embed = { version = "8.6.0", features = ["debug-embed", "include-exclude"] }
