--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,13 @@ name = "base1000"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-clap = { version = "4.5.31", features = ["derive"] }
+clap = { version = "4.5.31", features = ["derive"], optional = true }
 itertools = "0.14.0"
 num-bigint = "0.4.6"
-pyo3 = "0.24.0"
+pyo3 = { version="0.24.0", optional = true }
 rand = "0.9.0"
 rust-embed = { version = "8.6.0", features = ["debug-embed", "include-exclude"] }
 
 [features]
-extension-module = ["pyo3/extension-module"]
-default = ["extension-module"]
+encode = []
+decode = []
