fix(bin): correct feature gating for encode/decode logic
- Fixed conditional compilation in `src/main.rs` to properly gate `encode`
  and `decode` logic based on the presence of `clap`, `encode`, and
  `decode` features.
- Updated `Cargo.toml` to include the `base1000` binary with the correct
  feature requirement for `clap`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,7 @@ rust-embed = { version = "8.6.0", features = ["debug-embed", "include-exclude"] 
 [features]
 encode = []
 decode = []
+
+[[bin]]
+name = "base1000"
+required-features = ["clap"]
