--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,14 @@ name = "base1000"
 version = "0.1.0"
 authors = ["Li Hua <lihua@email.com>"]
 edition = "2024"
+description = 'A a text encoder based on the "Thousand Character Classic"'
+documentation = "https://docs.rs/base1000"
 readme = "README.md"
 repository = "https://github.com/real-LiHua/Base1000QianZiWenCodec"
+license = "Apache-2.0"
 keywords = ["base1000"]
 categories = ["command-line-utilities", "encoding"]
-include = ["/src/*.rs"]
+include = ["/src/*.rs", "/千字文/*.txt"]
 
 [lib]
 name = "base1000"
