--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "base1000"
 version = "0.1.1"
 authors = ["Li Hua <lihua@email.com>"]
 edition = "2024"
-description = 'A a text encoder based on the "Thousand Character Classic"'
+description = 'A text encoder based on the "Thousand Character Classic"'
 documentation = "https://docs.rs/base1000"
 readme = "README.md"
 repository = "https://github.com/real-LiHua/Base1000QianZiWenCodec"
