feat: improve release build configuration
This commit introduces changes to the release build profile in `Cargo.toml` to optimize the compiled binary.

- Enables link-time optimization (LTO) for better performance.
- Strips symbols from the binary to reduce its size.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,7 @@ default = ["clap", "encode", "decode"]
 [[bin]]
 name = "base1000"
 required-features = ["clap"]
+
+[profile.release]
+lto = true
+strip = "symbols"
