ci(test): add unit tests and integrate into CI pipeline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,8 @@ dynamic = ["version"]
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = ["tests"]
