--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
+scripts.base1000 = "base1000:__main__"
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
