feat(docs): add pipx/uvx direct execution instructions
Adds documentation for directly executing the tool using pipx/uvx in both English and Chinese READMEs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
-scripts.base1000 = "base1000:__main__"
+scripts.base1000 = "base1000:main"
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
