feat(api)!: Expose encode/decode functions directly from package
The `encode` and `decode` functions are now directly accessible from the `base1000` top-level package, simplifying imports. The internal `main` function has been renamed to `_main`.

BREAKING CHANGE: The `base1000.base1000` submodule no longer exists.
Users must now import `encode` and `decode` directly from the `base1000` package:
- Old usage: `from base1000 import base1000; base1000.encode(...)`
- New usage: `from base1000 import encode; encode(...)`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,15 @@ build-backend = "maturin"
 
 [project]
 name = "base1000"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
-scripts.base1000 = "base1000:main"
+scripts.base1000 = "base1000:_main"
+optional-dependencies.mcp = [ "mcp[cli]>=1.9.4" ]
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
