docs(readme): add Model Context Protocol (MCP) section
Adds a new section to README.md and README.zh_CN.md
detailing the Model Context Protocol (MCP) with a JSON configuration example.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,5 +19,5 @@ features = ["pyo3/extension-module"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "-ra -q"
+addopts = "-v"
 testpaths = ["tests"]
