--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
-scripts.base1000 = "base1000:_main"
+scripts.base1000 = "base1000:_run.cli"
 optional-dependencies.mcp = [ "mcp[cli]>=1.9.4" ]
 
 [tool.maturin]
@@ -19,5 +19,6 @@ features = ["pyo3/extension-module"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "-v"
+addopts = ["-v", "--import-mode=prepend"]
+pythonpath = "src"
 testpaths = ["tests"]
