Refactor dependabot.yml for multi-ecosystem groups

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,22 @@
 version: 2
+multi-ecosystem-groups:
+  infrastructure:
+    schedule:
+      interval: "weekly"
 updates:
   - package-ecosystem: "cargo"
     directory: "/"
-    schedule:
-      interval: "weekly"
+    multi-ecosystem-group: "infrastructure"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+      development-dependencies:
+        dependency-type: "development"
   - package-ecosystem: "uv"
     directory: "/"
-    schedule:
-      interval: "weekly"
+    multi-ecosystem-group: "infrastructure"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+      development-dependencies:
+        dependency-type: "development"
